--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 ==== version history of Hash::Case
 All change made by Mark Overmeer.
 
+version 1.01:
+
+	Fixes:
+
+	- do not use /bin/pwd in t/pod.t
+
 version 1.006: Thu Jun 19 08:40:46 CEST 2008
 
 	- perl5.005 does not understand "use 5.6.0" and tie bug in 5.6.2.
