--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 ==== version history of Hash::Case
-All change made by Mark Overmeer.
+
+All changes made by Mark Overmeer, unless explicitly stated otherwise.
+
+version 1.03: Mon 22 Jan 17:14:46 CET 2018
+
+	Improvements:
+	- convert to GIT
+	- development on GitHUB
 
 version 1.02: Fri Mar  9 09:24:30 CET 2012
 
