--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 All changes made by Mark Overmeer, unless explicitly stated otherwise.
 
+version 1.04:
+
 version 1.03: Mon 22 Jan 17:14:46 CET 2018
 
 	Improvements:
