--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@ All changes made by Mark Overmeer, unless explicitly stated otherwise.
 
 version 1.04:
 
+	Changes:
+	- replace Log::Report by croak on request by [Ed Avis]  GitHub#1
+
 version 1.03: Mon 22 Jan 17:14:46 CET 2018
 
 	Improvements:
