--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 All changes made by Mark Overmeer, unless explicitly stated otherwise.
 
+version 1.05:
+
 version 1.04: Thu  6 Feb 16:22:37 CET 2020
 
 	Changes:
