--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,12 @@
 
 All changes made by Mark Overmeer, unless explicitly stated otherwise.
 
-version 1.05:
+version 1.06:
+
+version 1.05: Thu  6 Feb 16:41:09 CET 2020
+
+	Fixes:
+	- accidentally left a "use Log::Report" in.
 
 version 1.04: Thu  6 Feb 16:22:37 CET 2020
 
